src/SymbolCompiler/Parser/SymbolParser.java
// Generated from C:/Users/mrshe/source/repos/SymbolCompiler/grammars\SymbolParser.g4 by ANTLR 4.10.1
package SymbolCompiler.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SymbolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, SEMICOLON=2, QUESTION_MARK=3, R_BRACE=4, L_BRACE=5, R_PAREN=6, L_PAREN=7, 
		SEPERATOR=8, LOOP=9, FUNC=10, CONSOLE=11, VAR=12, TYPENAME=13, TYPE_ARRAY=14, 
		TYPE_INT=15, TYPE_UINT=16, TYPE_FLOAT=17, TYPE_STRING=18, TYPE_CHAR=19, 
		FUNC_ARG_LIST=20, LIT_UINT=21, LIT_FLOAT=22, LIT_STRING=23, LIT_CHAR=24, 
		LIT_ARRAY=25, LIT_RANGE=26, OP_PLUS=27, OP_MINUS=28, OP_MULT=29, OP_DIV=30, 
		OP_ASSIGN=31, OP_EXP=32, OP_LSHFT=33, OP_RSHFT=34, OP_INC=35, OP_DEC=36, 
		OP_MOD=37, OP_EQ=38, OP_NEQ=39, OP_LT=40, OP_GT=41, OP_LTEQ=42, OP_GTEQ=43, 
		OP_AND=44, OP_OR=45, OP_XOR=46, OP_NOT=47, OP_INDEX=48, OP_CAST=49, OP_RET=50, 
		OP_BREAK=51, OP_CONTINUE=52, OP_PANIC=53, OP_MEMBER_ACC=54, OP_LENGTH=55;
	public static final int
		RULE_program = 0, RULE_decl = 1, RULE_block = 2, RULE_varAssignment = 3, 
		RULE_stmt = 4, RULE_funcDecl = 5, RULE_retStmt = 6, RULE_ifStmt = 7, RULE_elseStmt = 8, 
		RULE_elseifStmt = 9, RULE_loopStmt = 10, RULE_printStmt = 11, RULE_readStmt = 12, 
		RULE_exprStmt = 13, RULE_expr = 14, RULE_booleanExpr = 15, RULE_equalityExpr = 16, 
		RULE_compExpr = 17, RULE_bitwiseExpr = 18, RULE_termExpr = 19, RULE_factorExpr = 20, 
		RULE_indexing = 21, RULE_unaryExpr = 22, RULE_castExpr = 23, RULE_callExpr = 24, 
		RULE_primaryExpr = 25, RULE_grouping = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "decl", "block", "varAssignment", "stmt", "funcDecl", "retStmt", 
			"ifStmt", "elseStmt", "elseifStmt", "loopStmt", "printStmt", "readStmt", 
			"exprStmt", "expr", "booleanExpr", "equalityExpr", "compExpr", "bitwiseExpr", 
			"termExpr", "factorExpr", "indexing", "unaryExpr", "castExpr", "callExpr", 
			"primaryExpr", "grouping"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "';'", "'?'", "'{'", "'}'", "'('", "')'", "'_'", "'O'", "'F'", 
			"'C'", null, null, null, null, null, null, "'s'", "'c'", null, null, 
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'='", "'^'", 
			"'<<'", "'>>'", "'++'", "'--'", "'%'", "'=='", "'!='", "'<'", "'>'", 
			"'<='", "'>='", "'&'", "'|'", "'><'", "'~'", "'@'", "'->'", "'=>'", "'>|'", 
			"'->>'", "'!'", "'.'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "SEMICOLON", "QUESTION_MARK", "R_BRACE", "L_BRACE", "R_PAREN", 
			"L_PAREN", "SEPERATOR", "LOOP", "FUNC", "CONSOLE", "VAR", "TYPENAME", 
			"TYPE_ARRAY", "TYPE_INT", "TYPE_UINT", "TYPE_FLOAT", "TYPE_STRING", "TYPE_CHAR", 
			"FUNC_ARG_LIST", "LIT_UINT", "LIT_FLOAT", "LIT_STRING", "LIT_CHAR", "LIT_ARRAY", 
			"LIT_RANGE", "OP_PLUS", "OP_MINUS", "OP_MULT", "OP_DIV", "OP_ASSIGN", 
			"OP_EXP", "OP_LSHFT", "OP_RSHFT", "OP_INC", "OP_DEC", "OP_MOD", "OP_EQ", 
			"OP_NEQ", "OP_LT", "OP_GT", "OP_LTEQ", "OP_GTEQ", "OP_AND", "OP_OR", 
			"OP_XOR", "OP_NOT", "OP_INDEX", "OP_CAST", "OP_RET", "OP_BREAK", "OP_CONTINUE", 
			"OP_PANIC", "OP_MEMBER_ACC", "OP_LENGTH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SymbolParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SymbolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SymbolParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << R_BRACE) | (1L << R_PAREN) | (1L << LOOP) | (1L << FUNC) | (1L << CONSOLE) | (1L << VAR) | (1L << LIT_UINT) | (1L << LIT_FLOAT) | (1L << LIT_STRING) | (1L << LIT_CHAR) | (1L << LIT_ARRAY) | (1L << LIT_RANGE) | (1L << OP_MINUS) | (1L << OP_NOT) | (1L << OP_RET) | (1L << OP_LENGTH))) != 0)) {
				{
				{
				setState(54);
				decl();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public VarAssignmentContext varAssignment() {
			return getRuleContext(VarAssignmentContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public FuncDeclContext funcDecl() {
			return getRuleContext(FuncDeclContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				varAssignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				funcDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode R_BRACE() { return getToken(SymbolParser.R_BRACE, 0); }
		public TerminalNode L_BRACE() { return getToken(SymbolParser.L_BRACE, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(R_BRACE);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << R_BRACE) | (1L << R_PAREN) | (1L << LOOP) | (1L << FUNC) | (1L << CONSOLE) | (1L << VAR) | (1L << LIT_UINT) | (1L << LIT_FLOAT) | (1L << LIT_STRING) | (1L << LIT_CHAR) | (1L << LIT_ARRAY) | (1L << LIT_RANGE) | (1L << OP_MINUS) | (1L << OP_NOT) | (1L << OP_RET) | (1L << OP_LENGTH))) != 0)) {
				{
				{
				setState(68);
				decl();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(L_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarAssignmentContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(SymbolParser.VAR, 0); }
		public TerminalNode OP_ASSIGN() { return getToken(SymbolParser.OP_ASSIGN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode OP_INDEX() { return getToken(SymbolParser.OP_INDEX, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterVarAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitVarAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitVarAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarAssignmentContext varAssignment() throws RecognitionException {
		VarAssignmentContext _localctx = new VarAssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varAssignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(VAR);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_INDEX) {
				{
				setState(77);
				match(OP_INDEX);
				setState(78);
				expr();
				}
			}

			setState(81);
			match(OP_ASSIGN);
			setState(82);
			stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public RetStmtContext retStmt() {
			return getRuleContext(RetStmtContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public LoopStmtContext loopStmt() {
			return getRuleContext(LoopStmtContext.class,0);
		}
		public PrintStmtContext printStmt() {
			return getRuleContext(PrintStmtContext.class,0);
		}
		public ReadStmtContext readStmt() {
			return getRuleContext(ReadStmtContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				retStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				exprStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				ifStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				loopStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				printStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				readStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDeclContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(SymbolParser.FUNC, 0); }
		public TerminalNode SEPERATOR() { return getToken(SymbolParser.SEPERATOR, 0); }
		public TerminalNode LIT_UINT() { return getToken(SymbolParser.LIT_UINT, 0); }
		public TerminalNode R_PAREN() { return getToken(SymbolParser.R_PAREN, 0); }
		public TerminalNode L_PAREN() { return getToken(SymbolParser.L_PAREN, 0); }
		public TerminalNode OP_RET() { return getToken(SymbolParser.OP_RET, 0); }
		public TerminalNode TYPENAME() { return getToken(SymbolParser.TYPENAME, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> FUNC_ARG_LIST() { return getTokens(SymbolParser.FUNC_ARG_LIST); }
		public TerminalNode FUNC_ARG_LIST(int i) {
			return getToken(SymbolParser.FUNC_ARG_LIST, i);
		}
		public FuncDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterFuncDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitFuncDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitFuncDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDeclContext funcDecl() throws RecognitionException {
		FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(FUNC);
			setState(94);
			match(SEPERATOR);
			setState(95);
			match(LIT_UINT);
			setState(96);
			match(R_PAREN);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNC_ARG_LIST) {
				{
				{
				setState(97);
				match(FUNC_ARG_LIST);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(L_PAREN);
			setState(104);
			match(OP_RET);
			setState(105);
			match(TYPENAME);
			setState(106);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetStmtContext extends ParserRuleContext {
		public TerminalNode OP_RET() { return getToken(SymbolParser.OP_RET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RetStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterRetStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitRetStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitRetStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetStmtContext retStmt() throws RecognitionException {
		RetStmtContext _localctx = new RetStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_retStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(OP_RET);
			setState(109);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode QUESTION_MARK() { return getToken(SymbolParser.QUESTION_MARK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ElseifStmtContext> elseifStmt() {
			return getRuleContexts(ElseifStmtContext.class);
		}
		public ElseifStmtContext elseifStmt(int i) {
			return getRuleContext(ElseifStmtContext.class,i);
		}
		public List<ElseStmtContext> elseStmt() {
			return getRuleContexts(ElseStmtContext.class);
		}
		public ElseStmtContext elseStmt(int i) {
			return getRuleContext(ElseStmtContext.class,i);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStmt);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			expr();
			setState(112);
			match(QUESTION_MARK);
			setState(113);
			block();
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(116);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						setState(114);
						elseifStmt();
						}
						break;
					case 2:
						{
						setState(115);
						elseStmt();
						}
						break;
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseStmtContext extends ParserRuleContext {
		public TerminalNode OP_NOT() { return getToken(SymbolParser.OP_NOT, 0); }
		public TerminalNode QUESTION_MARK() { return getToken(SymbolParser.QUESTION_MARK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ElseStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterElseStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitElseStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitElseStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseStmtContext elseStmt() throws RecognitionException {
		ElseStmtContext _localctx = new ElseStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_elseStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(OP_NOT);
			setState(122);
			match(QUESTION_MARK);
			setState(123);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseifStmtContext extends ParserRuleContext {
		public TerminalNode OP_NOT() { return getToken(SymbolParser.OP_NOT, 0); }
		public List<TerminalNode> QUESTION_MARK() { return getTokens(SymbolParser.QUESTION_MARK); }
		public TerminalNode QUESTION_MARK(int i) {
			return getToken(SymbolParser.QUESTION_MARK, i);
		}
		public TerminalNode OP_AND() { return getToken(SymbolParser.OP_AND, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ElseifStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterElseifStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitElseifStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitElseifStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseifStmtContext elseifStmt() throws RecognitionException {
		ElseifStmtContext _localctx = new ElseifStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_elseifStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(OP_NOT);
			setState(126);
			match(QUESTION_MARK);
			setState(127);
			match(OP_AND);
			setState(128);
			expr();
			setState(129);
			match(QUESTION_MARK);
			setState(130);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopStmtContext extends ParserRuleContext {
		public TerminalNode LOOP() { return getToken(SymbolParser.LOOP, 0); }
		public TerminalNode R_PAREN() { return getToken(SymbolParser.R_PAREN, 0); }
		public TerminalNode L_PAREN() { return getToken(SymbolParser.L_PAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> VAR() { return getTokens(SymbolParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(SymbolParser.VAR, i);
		}
		public TerminalNode OP_CONTINUE() { return getToken(SymbolParser.OP_CONTINUE, 0); }
		public TerminalNode LIT_RANGE() { return getToken(SymbolParser.LIT_RANGE, 0); }
		public LoopStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).enterLoopStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SymbolParserListener ) ((SymbolParserListener)listener).exitLoopStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SymbolParserVisitor ) return ((SymbolParserVisitor<? extends T>)visitor).visitLoopStmt(this);
			else return visitor.visitChildren(this);
		}
	}
